src/index.css
/* ... */
.block--dark {
  background: radial-gradient(
    circle at 10% 20%,
    rgb(0, 0, 0) 0%,
    rgb(64, 64, 64) 90.2%
  );
}

.block--stone {
  background: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
}

.block--mixedgray {
  background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
}

.block--lightgray {
  background: radial-gradient(
    circle at 10% 20%,
    rgba(216, 241, 230, 0.46) 0.1%,
    rgba(233, 226, 226, 0.28) 90.1%
  );
}

.block--dark .block__heading {
  color: #fff;
}

.block__header {
  display: flex;
  justify-content: center;
  align-items: center;
}

.block__heading {
  width: 100%;
  display: grid;
  grid-template-columns: 50px 1fr;
  justify-items: center;
  text-transform: capitalize;
  text-align: center;
}

.block__heading p {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
}

@media screen and (min-width: 768px) {
  .block__heading {
    display: flex;
    width: initial;
  }
}

/* Hero */

.container {
  padding: 0.6rem;
}

#hero {
  height: 100vh;
}

.hero-block {
  background-image: url(./images/hero1@328.webp);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 20% 0%;
  border-radius: var(--border-radius-min);
  border: 2px solid #97979a;
  box-shadow: 0 0 30px 25px #bbbbcc;
  position: relative;
  height: 100%;
}

.hero__span {
  position: absolute;
  top: 55%;
}

.hero__header {
  animation: glow 1s ease-in-out infinite alternate;
  color: #fbf37e;
  text-align: center;
  text-decoration: underline;
  margin: 0;
  font-size: 5.8rem;
}

@media screen and (min-width: 768px) {
  .hero-block {
    background-image: url(./images/hero1@1028.webp);
    background-position: initial;
  }

  .hero__span {
    width: 55%;
    right: 0;
    top: 25%;
  }

  .hero__header {
    font-size: 8rem;
  }
}

@keyframes glow {
  from {
    text-shadow: 5px 5px 10px rgb(150, 128, 57), -5px 5px 10px rgb(150, 128, 57),
      -5px -5px 10px rgb(150, 128, 57), 5px -5px 10px rgb(150, 128, 57);
  }
  to {
    text-shadow: 10px 10px 20px rgb(150, 128, 57),
      -10px 10px 20px rgb(150, 128, 57), -10px -10px 20px rgb(150, 128, 57),
      10px -10px 20px rgb(150, 128, 57);
  }
}

/* Medias */

.media {
  display: flex;
  max-width: 550px;
  text-align: left;
}

.media--upside {
  flex-direction: column;
}

.media__icon {
  margin: 2rem 1.5rem 0 0;
}

.media--upside .media__icon {
  margin-left: 1rem;
}

.media__title {
  text-transform: capitalize;
  margin: 1.4rem 0 1.2rem;
}

.media--upside .media__title {
  color: #fff;
}

.media__text {
  line-height: 1.7;
  margin-top: 1.2rem;
}

/* Icons */

.icon-container {
  border-radius: 100%;
  width: 50px;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 1rem;
}

.icon-container--small {
  width: 60px;
  height: 60px;
}

.icon-container--primary {
  background-color: #f3f9fa;
}

.icon-container--accent {
  background-color: var(--color-accent);
}

.icon-container--nav {
  background-color: rgb(55, 55, 55);
}

.icon {
  width: 60px;
  height: 60px;
}

.icon--medium {
  width: 45px;
}

.icon--primary {
  fill: var(--color-secondary);
}

.icon--accent {
  fill: #fff;
}

.icon--search {
  height: 20px;
  margin-right: 0.5rem;
}

@media screen and (min-width: 668px) {
  .icon-container {
    width: 90px;
    height: 90px;
  }
}

@media screen and (min-width: 1024px) {
  .icon-container {
    width: 60px;
    height: 60px;
  }
}

/* Badges */

.number-badge {
  color: #fff;
  border-radius: 100%;
  width: 35px;
  height: 35px;
  display: inline-flex;
  align-self: center;
  align-items: center;
  justify-content: center;
  font-size: 2rem;
  margin-right: 1.5rem;
  white-space: nowrap;
  overflow: hidden;
}

.number-badge--primary {
  background-color: var(--color-secondary);
}

/* History */

.history-block {
  border-top: 3px solid darkgrey;
  padding-bottom: 4rem;
}

.first-letter {
  text-decoration: underline;
  background-color: transparent;
  color: inherit;
}

.history__text {
  display: flex;
  flex-direction: column;
  --grid-gap: 2rem;
  gap: var(--grid-gap);
  max-width: 100vw;
}

.history__footer {
  background: linear-gradient(
    45deg,
    var(--color-secondary) 40%,
    var(--color-primary)
  );
  border-radius: var(--border-radius);
  transition: all 1s ease-in 0.5s,
    transform 0.7s cubic-bezier(0.175, 0.885, 0.32, 1.275);
  opacity: 0;
  height: 0;
  margin: 0 3rem;
  max-width: 550px;
  padding: 4rem 1rem 1rem;
  clip-path: polygon(
    20% 0,
    31% 17%,
    100% 17%,
    100% 100%,
    0 100%,
    0 17%,
    16% 17%
  );
}

.history__quote {
  color: #fff;
  text-align: center;
  font-style: italic;
}

.history__quote::before,
.memories__text::before,
.proposal__list li::before {
  content: open-quote;
}

.history__quote::after,
.memories__text::after,
.proposal__list li::after {
  content: close-quote;
}

.show-quote {
  position: relative;
  animation-name: move;
  animation-duration: 1s;
  animation-iteration-count: 1;
  animation-delay: 0.5s;
  opacity: 1;
  height: 100%;
}

@keyframes move {
  from {
    left: -100vw;
    scale: 0.1;
  }

  to {
    left: 0;
    rotate: 360deg;
    scale: 1;
  }
}

@media screen and (min-width: 768px) {
  .history__text {
    display: grid;
    grid-template-columns: repeat(2, calc(50% - (calc(var(--grid-gap) / 2))));
  }

  .history__footer {
    margin: 0 auto;
    transform: rotate(3.75deg);
    clip-path: polygon(
      86% 0,
      90% 17%,
      100% 17%,
      100% 100%,
      0 100%,
      0 17%,
      76% 17%
    );
  }

  .history__footer:hover {
    transform: rotate(0);
  }
}

/* Memories */

span.navigate {
  border-radius: var(--border-radius-min);
  transition: all 0.2s;
  font-size: 5rem;
  cursor: pointer;
  text-align: center;
  font-weight: 300;
}

span.navigate:hover {
  color: #bbb;
}

.memories-block {
  height: min-content;
}

.memories__gallery {
  display: flex;
  width: 100%;
  justify-content: center;
  align-items: center;
}
/* ... */

